2003-02-11  Pascal Georges <pascal.georges1@free.fr>
  * src/boards/*colors*.c : removed the thumb, directly calling process_ok

2003-02-10  Marius Andreiana <marius galuna.ro>
	* src/gcompris/config.c: romanian and russian locale are no longer combined

2003-02-10  Marius Andreiana <marius galuna.ro>
	* configure.in: added 'ro' to ALL_LINGUAS
	* boards/wordsgame/*.ro : added

2003-02-09  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/read_colors.c : see below
  * src/gcompris/bonus.c : hardened code against multiple quick key press
  * scr/gcompris/*.c & src/boards/*.c : changed all calls from gcompris_play_sound
  to gcompris_play_ogg, in order to have them work better on my system (KDE).

2003-02-08  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/read_colors.c : fixed a bug when the ENTER key is repeatdly
  pressed : the board_finished(BOARD_FINISHED_TOOMANYERRORS); got called once
  per key press, making too many pictures to be displayed. This bug may occur in other
  boards ...

2003-02-05  Bruno Coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: added po stats (python tool taken from dia)
	* boards/machpuzzle.xml.in: removed until it does something usefull
	* po-checktrans: a nive tool from Cyrille Chepelov to get stats on po files
	* po-checktrans.py: a nive tool from Cyrille Chepelov to get stats on po files

2003-02-04  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/config.c: Added "tr" (Turkish) to the languages' list.

2003-02-03  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "tr" (Turkish) to the languages' list.

2003-02-02  bruno  <bruno.coudoin@free.fr>

	* src/boards/enumerate.c: (item_event): Now object cannot be dropped outside the canvas
	* src/gcompris/gcompris.c: (board_widget_key_press_callback): removed old comment
	* TESTS: removed the comment on enumerate

2003-02-01  Pascal Georges <pascal.georges1@free.fr>
	*	src/gcompris/soundutil.c : as train.wav could not be played (/dev/dsp