@@ -334,20 +334,26 @@ static void game_won() {
 /* =====================================================================
  *
  * =====================================================================*/
-static void process_ok() {
+static gboolean process_ok_timeout() {
   gcompris_display_bonus(gamewon, BONUS_SMILEY);
   if (!gamewon)
     errors--;
   if (errors <1)
     errors = 1;
   update_clock();
-	
+
   if (errors <= 1) {
     board_finished(BOARD_FINISHED_TOOMANYERRORS);
-    return;
   }
-	
+
+  return FALSE;
 }
+
+static void process_ok() {
+	// leave time to display the right answer
+  g_timeout_add(1000, process_ok_timeout, NULL);
+}
+
 /* =====================================================================
  *
  * =====================================================================*/
@@ -550,3 +556,4 @@ static gboolean read_xml_file(char *fname)
   xmlFreeDoc(doc);
   return TRUE;
 }
+
