@@ -173,7 +173,7 @@ static void start_board (GcomprisBoard *agcomprisBoard)
 			   50,
 			   gcomprisBoard->height - 50,
 			   gcomprisBoard->number_of_sublevel);
-      gcompris_bar_set(GCOMPRIS_BAR_LEVEL|GCOMPRIS_BAR_OK);
+      gcompris_bar_set(GCOMPRIS_BAR_LEVEL);
 
       imageid_next_level();
 
@@ -405,8 +405,14 @@ static void game_won()
 }
 
 /* ==================================== */
-static void process_ok() {
+static gboolean process_ok_timeout() {
   gcompris_display_bonus(gamewon, BONUS_SMILEY);
+	return FALSE;
+}
+
+static void process_ok() {
+	// leave time to display the right answer
+  g_timeout_add(1000, process_ok_timeout, NULL);
 }
 /* ==================================== */
 static gint
@@ -441,6 +447,7 @@ item_event(GnomeCanvasItem *item, GdkEvent *event, gpointer data)
 	gamewon = FALSE;
       }
       highlight_selected(temp);
+      process_ok();
       break;
 
     case GDK_MOTION_NOTIFY:
